fixes font size on mobile

--- a/src/app.scss
+++ b/src/app.scss
@@ -35,6 +35,10 @@ body {
             text-align: left;
             border-left: solid 2px #a6c766;
 
+            @media (min-width: 370px) {
+                font-size: 1.5rem;
+            }
+
             @media (min-width: 560px) {
                 font-size: 3rem;
                 width: 52.9%;
